--- a/UWCourseGoose/AndroidManifest.xml
+++ b/UWCourseGoose/AndroidManifest.xml
@@ -26,7 +26,6 @@
         </activity>
         
         
-        
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -36,6 +35,18 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name=".CourseActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.example.uwcoursegoose.COURSEACTIVITY" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
+        
     </application>
 
 </manifest>
